--- a/AutoMall/ViewControllers/Upkeep/BaoyangDiscountsVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/BaoyangDiscountsVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -37,7 +37,7 @@
                 <constraint firstItem="Va1-pX-bnP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rS3-LA-7QD"/>
                 <constraint firstAttribute="trailing" secondItem="Va1-pX-bnP" secondAttribute="trailing" id="xOg-iu-RDv"/>
             </constraints>
-            <point key="canvasLocation" x="-197" y="64"/>
+            <point key="canvasLocation" x="1" y="58"/>
         </view>
     </objects>
 </document>
