--- a/AutoMall/ViewControllers/Upkeep/UpkeepCarInfoVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/UpkeepCarInfoVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -36,7 +36,7 @@
                 <constraint firstItem="6gP-Rs-MdT" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="gfp-fV-HtR"/>
                 <constraint firstItem="6gP-Rs-MdT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ngA-9N-2O9"/>
             </constraints>
-            <point key="canvasLocation" x="-255" y="47"/>
+            <point key="canvasLocation" x="-65" y="45"/>
         </view>
     </objects>
 </document>
