--- a/AutoMall/Base.lproj/Main.storyboard
+++ b/AutoMall/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -14,9 +14,10 @@
             <objects>
                 <navigationController id="FLK-OX-Pv4" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Y65-ML-qdh"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FcZ-e5-6QA">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="FcZ-e5-6QA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </navigationBar>
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="rootViewController" id="eTK-Q2-OVy"/>
@@ -40,7 +41,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NJo-XH-TUQ">
                                 <rect key="frame" x="10" y="0.0" width="355" height="667"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RbZ-Z9-Vti">
                                     <size key="itemSize" width="112" height="210"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -56,10 +57,11 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="check_default" translatesAutoresizingMaskIntoConstraints="NO" id="9jZ-UH-S3r">
-                                                    <rect key="frame" x="0.0" y="2" width="112" height="175"/>
+                                                    <rect key="frame" x="5" y="5" width="102" height="171"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="快速保养检查" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ywp-Ou-Lhv">
-                                                    <rect key="frame" x="0.0" y="182" width="112" height="18"/>
+                                                    <rect key="frame" x="0.0" y="184" width="112" height="18"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="18" id="TrS-Za-3ar"/>
                                                     </constraints>
@@ -69,14 +71,15 @@
                                                 </label>
                                             </subviews>
                                         </view>
+                                        <color key="backgroundColor" red="0.99607843137254903" green="0.99607843137254903" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="9jZ-UH-S3r" secondAttribute="trailing" id="FAf-Q2-Ta2"/>
-                                            <constraint firstItem="Ywp-Ou-Lhv" firstAttribute="top" secondItem="9jZ-UH-S3r" secondAttribute="bottom" constant="5" id="NrL-FZ-234"/>
-                                            <constraint firstAttribute="bottom" secondItem="Ywp-Ou-Lhv" secondAttribute="bottom" constant="10" id="WSk-WB-i6z"/>
+                                            <constraint firstAttribute="trailing" secondItem="9jZ-UH-S3r" secondAttribute="trailing" constant="5" id="FAf-Q2-Ta2"/>
+                                            <constraint firstItem="Ywp-Ou-Lhv" firstAttribute="top" secondItem="9jZ-UH-S3r" secondAttribute="bottom" constant="8" id="NrL-FZ-234"/>
+                                            <constraint firstAttribute="bottom" secondItem="Ywp-Ou-Lhv" secondAttribute="bottom" constant="8" id="WSk-WB-i6z"/>
                                             <constraint firstAttribute="trailing" secondItem="Ywp-Ou-Lhv" secondAttribute="trailing" id="XmA-B7-wy6"/>
                                             <constraint firstItem="Ywp-Ou-Lhv" firstAttribute="leading" secondItem="7Ty-62-hd2" secondAttribute="leading" id="foH-0A-PKl"/>
-                                            <constraint firstItem="9jZ-UH-S3r" firstAttribute="top" secondItem="7Ty-62-hd2" secondAttribute="top" constant="2" id="jb3-u2-6MV"/>
-                                            <constraint firstItem="9jZ-UH-S3r" firstAttribute="leading" secondItem="7Ty-62-hd2" secondAttribute="leading" id="pN1-GI-nH4"/>
+                                            <constraint firstItem="9jZ-UH-S3r" firstAttribute="top" secondItem="7Ty-62-hd2" secondAttribute="top" constant="5" id="jb3-u2-6MV"/>
+                                            <constraint firstItem="9jZ-UH-S3r" firstAttribute="leading" secondItem="7Ty-62-hd2" secondAttribute="leading" constant="5" id="pN1-GI-nH4"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="img" destination="9jZ-UH-S3r" id="hMS-wN-HEJ"/>
@@ -113,9 +116,10 @@
             <objects>
                 <navigationController id="dUV-mP-trR" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Bms-Jy-HS6"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yTk-Nz-Dwj">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="yTk-Nz-Dwj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </navigationBar>
                     <connections>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="rootViewController" id="cfV-kn-MI1"/>
@@ -261,7 +265,7 @@
         <!--third-->
         <scene sceneID="FGq-Mh-22S">
             <objects>
-                <viewController id="dz7-sI-hbo" userLabel="third" customClass="MallVC" sceneMemberID="viewController">
+                <viewController title="商城" id="dz7-sI-hbo" userLabel="third" customClass="MallVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="axg-XQ-g8N"/>
                         <viewControllerLayoutGuide type="bottom" id="BsB-gX-NAf"/>
@@ -300,7 +304,7 @@
         <!--Fourth-->
         <scene sceneID="8gO-Bh-oUf">
             <objects>
-                <viewController id="BMl-uz-4Cz" userLabel="Fourth" customClass="PersonalCenterVC" sceneMemberID="viewController">
+                <viewController title="个人中心" id="BMl-uz-4Cz" userLabel="Fourth" customClass="PersonalCenterVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="vrb-dd-Kgt"/>
                         <viewControllerLayoutGuide type="bottom" id="dAo-fH-1k8"/>
@@ -342,9 +346,10 @@
             <objects>
                 <navigationController id="leZ-Jl-Ahm" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="jKQ-7u-8hm"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="A6f-qy-k90">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="A6f-qy-k90">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </navigationBar>
                     <connections>
                         <segue destination="dz7-sI-hbo" kind="relationship" relationship="rootViewController" id="GGl-PA-PDJ"/>
@@ -359,9 +364,10 @@
             <objects>
                 <navigationController id="bn1-fA-xYY" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="xjg-Qk-JJ8"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="u1v-Hf-Tcm">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="u1v-Hf-Tcm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </navigationBar>
                     <connections>
                         <segue destination="BMl-uz-4Cz" kind="relationship" relationship="rootViewController" id="HdN-Ag-TCc"/>
