--- a/AutoMall/ViewControllers/PersonalCenter/ApplyAuthenticationVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/ApplyAuthenticationVC.xib
@@ -332,7 +332,7 @@
                                         <action selector="replayAction:" destination="-1" eventType="touchUpInside" id="0Fd-Rm-fdF"/>
                                     </connections>
                                 </button>
-                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gXp-Zz-elE" customClass="WPImageView">
+                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="picture_1.png" translatesAutoresizingMaskIntoConstraints="NO" id="gXp-Zz-elE" customClass="WPImageView">
                                     <rect key="frame" x="16" y="515" width="100" height="100"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="100" id="rDS-Oz-DzJ"/>
@@ -481,4 +481,7 @@
             <point key="canvasLocation" x="-342.5" y="17.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="picture_1.png" width="332" height="220"/>
+    </resources>
 </document>
