--- a/AutoMall/ViewControllers/Upkeep/AutoCheckResultVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckResultVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,22 +21,37 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="o0g-fE-sEl">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="TRz-ix-Ezk"/>
                         <outlet property="delegate" destination="-1" id="Q1C-Ak-UIy"/>
                     </connections>
                 </tableView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sHx-Vk-fsf">
+                    <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                    <color key="backgroundColor" red="0.92941176470588238" green="0.10980392156862745" blue="0.14117647058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="GZj-hp-cCz"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                    <state key="normal" title="查看服务方案"/>
+                    <connections>
+                        <action selector="upkeepPlanAction:" destination="-1" eventType="touchUpInside" id="UWv-w9-fxD"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="sHx-Vk-fsf" secondAttribute="trailing" id="5qw-mH-D6F"/>
+                <constraint firstItem="sHx-Vk-fsf" firstAttribute="top" secondItem="o0g-fE-sEl" secondAttribute="bottom" id="8f0-ZK-hVo"/>
+                <constraint firstItem="sHx-Vk-fsf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="cg1-GW-39P"/>
                 <constraint firstItem="o0g-fE-sEl" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="iOy-tg-nj9"/>
-                <constraint firstAttribute="bottom" secondItem="o0g-fE-sEl" secondAttribute="bottom" id="jMi-oc-YRc"/>
+                <constraint firstAttribute="bottom" secondItem="sHx-Vk-fsf" secondAttribute="bottom" id="l6Q-xd-eIU"/>
                 <constraint firstItem="o0g-fE-sEl" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="slm-26-1QW"/>
                 <constraint firstAttribute="trailing" secondItem="o0g-fE-sEl" secondAttribute="trailing" id="u9C-ik-869"/>
             </constraints>
-            <point key="canvasLocation" x="-118" y="50"/>
+            <point key="canvasLocation" x="-118.5" y="49.5"/>
         </view>
     </objects>
 </document>
